391: Fix styles for button_to on small-x again

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -154,6 +154,6 @@ button.close {
   background: none;
 }
 
-.sidebar-button div {
-  margin-top: 10px;
+div.sidebar-button {
+  margin: 10px 0;
 }
