--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -117,9 +117,9 @@ input[type='submit'] {
 
 // SMALL X TO DELETE TAGS OR LISTS THAT NEED TO BE BUTTON_TO
 
-form.button_to {
+form.small-x {
   display: inline-block;
-  & button.small-x {
+  & button {
     background: none;
     border: none;
     color: $light-blue;
